Fix recipe card image alignment

--- a/src/css/_recipe-card.scss
+++ b/src/css/_recipe-card.scss
@@ -43,6 +43,7 @@ main {
 
   .recipe--title {
     margin-top: 5px;
+    min-height: 15%;
   }
 }
 
